# task-tango-api

./: .gitignore  README.md  database.py  models.py  pyproject.toml  task_cli.py  task_manager.py  test_database.py
tests/integration/: test_task_cli.py
tests/unit/: test_task_manager.py
typespec/: .gitignore  main.tsp  package.json  validate.py  view-swagger.sh
